# autoresearch-foundry

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
app/: __init__.py  __main__.py  demo_run.py  engine.py  evaluator.py  memory_markdown.py  memory_store.py  run.py  server.py  task_catalog.py
app/bench/: livecodebench_prepare.py  planbench_prepare.py  planbench_support.py
app/codegen/: README.md  __init__.py  benchmark_support.py  catalog.py  co_benchmarks.py  config.py  dataset_runner.py  dataset_support.py  errors.py  handoff.py  llm.py  math_grading.py  or_benchmarks.py  reporting.py  selection.py  task_contracts.py  trainer.py  verifier.py
app/configs/: codegen.py  (+2 more)
benchmark/: README.md  prepare_datasets.py  registry.json
benchmarks/: README.md
data/: experiences.json  tasks.json
docs/: demo.md  framework.md  plan.md
paper/: outline.md
references/: README.md  backend-modules.md  codex-runbook.md  demo-wireframe.md  evaluation-contract.md  framework.md  frontend-modules.md  paper-structure.md  runtime-flow.md
runs/: contains-duplicates.json  latest_run.json
scripts/: bootstrap_local_demo.py
tests/: __init__.py  helpers.py  test_app_entry.py  test_benchmark_comparison.py  test_benchmark_prepare_datasets.py  test_co_benchmarks.py  test_codegen_catalog.py  test_codegen_config.py  test_codegen_defaults.py  test_codegen_runner.py  test_codegen_verifier.py  test_demo.py  test_memory_store.py  test_or_benchmarks.py  test_server_api.py  test_ui_smoke.py
ui/: app.js  index.html  style.css  tsconfig.json
(+162 files in other folders)
